lot of changes made but stuck at some bugg : Can't set up the HMR: stuck with “Waiting for update signal from WDS…” in console

--- a/101203070_comp3123_a2/src/App.css
+++ b/101203070_comp3123_a2/src/App.css
@@ -15,13 +15,28 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+.App-main {
+  background-color: #282c34;
+  min-height: 65vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.App-footer {
+  background-color: #000000;
+  color: aliceblue;
+  min-height: 5vh;
 }
 
 .App-link {
